<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".loans.ui.new_loan.NewLoanFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/last_name_layout"
            app:layout_constraintStart_toStartOf="@id/last_name_layout"
            app:layout_constraintTop_toBottomOf="@id/last_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"
                android:inputType="textCapSentences"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/first_name_layout"
            app:layout_constraintStart_toStartOf="@id/first_name_layout"
            app:layout_constraintTop_toBottomOf="@id/first_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/phone_number_layout"
            app:layout_constraintStart_toStartOf="@id/phone_number_layout"
            app:layout_constraintTop_toBottomOf="@id/phone_number_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/amount"
                android:imeOptions="actionDone"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/period_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toStartOf="@id/percent_layout"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/amount_layout"
            app:layout_constraintTop_toBottomOf="@id/amount_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/period_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/period"
                android:inputType="number"
                android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/percent_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            app:layout_constraintEnd_toEndOf="@id/amount_layout"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/period_layout"
            app:layout_constraintTop_toTopOf="@id/period_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/percent_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/percent"
                android:inputType="number"
                android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/request_loan_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/apply_for_loan"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/percent_layout" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/request_loan_btn"
            app:layout_constraintEnd_toEndOf="@id/request_loan_btn"
            app:layout_constraintStart_toStartOf="@id/request_loan_btn"
            app:layout_constraintTop_toTopOf="@id/request_loan_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>