<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/guestUserFragment"
        android:name="com.example.cft_final_project.authentication.ui.GuestUserFragment"
        android:label="@string/dest_guest"
        tools:layout="@layout/fragment_guest_user" >
        <action
            android:id="@+id/action_guestUserFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_guestUserFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.cft_final_project.authentication.ui.LoginFragment"
        android:label="@string/dest_sign_in"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_loanListFragment"
            app:destination="@id/loanListFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.cft_final_project.authentication.ui.RegistrationFragment"
        android:label="@string/dest_sign_up"
        tools:layout="@layout/fragment_registration" >
        <action
            android:id="@+id/action_registrationFragment_to_loanListFragment"
            app:destination="@id/loanListFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.cft_final_project.HomeFragment"
        android:label="HomeFragment">
        <action
            android:id="@+id/action_homeFragment_to_loanListFragment"
            app:destination="@id/loanListFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_homeFragment_to_guestUserFragment"
            app:destination="@id/guestUserFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loanListFragment"
        android:name="com.example.cft_final_project.loans.ui.loan_list.LoanListFragment"
        android:label="@string/dest_loan_list"
        tools:layout="@layout/fragment_loan_list" >
        <action
            android:id="@+id/action_loanListFragment_to_loanDetailsFragment"
            app:destination="@id/loanDetailsFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_loanListFragment_to_guestUserFragment"
            app:destination="@id/guestUserFragment"
            app:popUpTo="@id/guestUserFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loanListFragment_to_newLoanFragment"
            app:destination="@id/newLoanFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/loanDetailsFragment"
        android:name="com.example.cft_final_project.loans.ui.loan_details.LoanDetailsFragment"
        android:label="@string/dest_loan_details"
        tools:layout="@layout/fragment_loan_details">
        <argument android:name="loan"
            app:argType="com.example.cft_final_project.loans.data.model.LoanUi" />
    </fragment>
    <fragment
        android:id="@+id/newLoanFragment"
        android:name="com.example.cft_final_project.loans.ui.new_loan.NewLoanFragment"
        android:label="fragment_new_loan"
        tools:layout="@layout/fragment_new_loan" >
        <action
            android:id="@+id/action_newLoanFragment_to_newLoanResultFragment"
            app:destination="@id/newLoanResultFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/newLoanResultFragment"
        android:name="com.example.cft_final_project.loans.ui.new_loan.NewLoanResultFragment"
        android:label="fragment_new_loan_result"
        tools:layout="@layout/fragment_new_loan_result" >
        <action
            android:id="@+id/action_newLoanResultFragment_to_loanListFragment"
            app:destination="@id/loanListFragment"
            app:popUpTo="@id/loanListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>