<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.cft_final_project.authentication.ui.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.ui.RegistrationFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:hint="@string/login" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/login_layout"
            app:layout_constraintEnd_toEndOf="@id/login_layout"
            app:layout_constraintTop_toBottomOf="@id/login_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/sign_up_btn"
            visibility="@{!viewModel.isLoadingLiveData()}"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/password_layout"
            app:layout_constraintEnd_toEndOf="@id/password_layout"
            app:layout_constraintTop_toBottomOf="@id/password_layout" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            visibility="@{viewModel.isLoadingLiveData()}"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/sign_up_btn"
            app:layout_constraintEnd_toEndOf="@id/sign_up_btn"
            app:layout_constraintTop_toTopOf="@id/sign_up_btn"
            app:layout_constraintBottom_toBottomOf="@id/sign_up_btn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>